--- a/ArkanProje/index.html
+++ b/ArkanProje/index.html
@@ -196,7 +196,7 @@
             <h6 class="services_title">HİZMETLERİMİZ</h6>
             <ul class="mt-4">
               <li class="d-flex mb-2">
-                <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                <img src="./assits/imags/jawhara.svg" alt="">
                 <div>
                   <h6>Hukuki Danışmanlık</h6>
                   <p>Yatırımcıların beklentileri göz önünde bulundurarak yatırım yapmak istedikleri gayrimenkul ile
@@ -206,7 +206,7 @@
                 </div>
               </li>
               <li class="d-flex mb-2">
-                <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                <img src="./assits/imags/jawhara.svg" alt="">
                 <div>
                   <h6>Gayrimenkul Pazarlama</h6>
 
@@ -216,7 +216,7 @@
                 </div>
               </li>
               <li class="d-flex mb-2">
-                <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                <img src="./assits/imags/jawhara.svg" alt="">
                 <div>
                   <h6>Gayrimenkul Pazarlama</h6>
                   <p>YGayrimenkul sektörünün sırlarına, püf noktalarına hâkim olan ve Türkiye’deki emlak pazarlarının
@@ -226,7 +226,7 @@
                 </div>
               </li>
               <li class="d-flex ">
-                <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                <img src="./assits/imags/jawhara.svg" alt="">
                 <div>
                   <h6>Proje Yönetimi</h6>
                   <p>Yatırımcılarımıza, Türkiye’nin emlak piyasası hakkında detaylı bilgiler vermekten öte yatırım
@@ -257,21 +257,21 @@
               <div class="carousel-item active">
                 <ul class="mt-4">
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Çocuklar için oyun alanları</p>
 
                     </div>
                   </li>
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Kapalı yüzme havuzu ve sauna</p>
 
                     </div>
                   </li>
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
 
                       <p>Açık ve kapalı otoparklar</p>
@@ -279,14 +279,14 @@
                     </div>
                   </li>
                   <li class="d-flex  mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Bahçeler ve yeşil alanlar</p>
 
                     </div>
                   </li>
                   <li class="d-flex  mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Türk hamamı</p>
 
@@ -297,21 +297,21 @@
               <div class="carousel-item">
                 <ul class="mt-4">
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Çocuklar için oyun alanları</p>
 
                     </div>
                   </li>
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Kapalı yüzme havuzu ve sauna</p>
 
                     </div>
                   </li>
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
 
                       <p>Açık ve kapalı otoparklar</p>
@@ -319,14 +319,14 @@
                     </div>
                   </li>
                   <li class="d-flex  mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Bahçeler ve yeşil alanlar</p>
 
                     </div>
                   </li>
                   <li class="d-flex  mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Türk hamamı</p>
 
@@ -337,21 +337,21 @@
               <div class="carousel-item">
                 <ul class="mt-4">
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Çocuklar için oyun alanları</p>
 
                     </div>
                   </li>
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Kapalı yüzme havuzu ve sauna</p>
 
                     </div>
                   </li>
                   <li class="d-flex mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
 
                       <p>Açık ve kapalı otoparklar</p>
@@ -359,14 +359,14 @@
                     </div>
                   </li>
                   <li class="d-flex  mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Bahçeler ve yeşil alanlar</p>
 
                     </div>
                   </li>
                   <li class="d-flex  mb-2">
-                    <img src="./assits/imags/جوهرة لأركان.svg" alt="">
+                    <img src="./assits/imags/jawhara.svg" alt="">
                     <div>
                       <p>Türk hamamı</p>
 
